infra/k8s/22-worker-light.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-light
  namespace: workload-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-light
  template:
    metadata:
      labels:
        app: worker-light
    spec:
      containers:
        - name: worker-light
          image: workload-demo/worker-light:local
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "256Mi"
