infra/k8s/23-worker-heavy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-heavy
  namespace: workload-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-heavy
  template:
    metadata:
      labels:
        app: worker-heavy
    spec:
      containers:
        - name: worker-heavy
          image: workload-demo/worker-heavy:local
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "1024Mi"
